Project simple_bank {
    database_type:"PostgreSQL"
    Note: '''
        # Simple Bank Database
    '''
}

// 用户表
Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table verify_emails {
  id bigserial [pk]
  username varchar [ref: > U.username,not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null,default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}

// 帐号表
Table accounts as A {
  // 主键ID
  id bigserial [pk]
  // 所有者
  owner varchar [ref: > U.username, not null]
  // 余额
  balance bigint [not null]
  // 币种
  currency varchar [not null]
  // 创建时间
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    owner
    (owner, currency) [unique]
  }
}

// 条目表，记录余额变更
Table entries {
  // 主键ID
  id bigserial [pk]
  // 帐号ID
  account_id bigint [ref: > A.id, not null]
  // 金额
  amount bigint [not null, note: "可以是正数也可以是负数"]
  // 创建时间
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    account_id
  }
}

// 转账表，记录帐号之间所有的转账记录
Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: "必须为正数"]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Enum Currency {
  USD
  CNY
}